<resources>
    <string name="app_name">DQXGuide</string>

    <string name="main_menu_title">DQX攻略手帳</string>
    <string name="main_menu_version">v0.1</string>
    
    
    
    <string name="main_menu_accessibility_top">DQX Guide</string>
    <string name="main_menu_accessibility_bottom"></string>
    <string name="list_main_menu_accessibility"></string>
    
    <string name="report_title">報告</string>
    <string name="report_back">&lt; TOP</string>
    <string name="report_description">記載されているデータが異なる場合の訂正、ご意見・ご要望などがあればこちらからどうぞ。</string>
    <string name="report_send">送信(GMailが起動されます)</string>

</resources>