<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <RelativeLayout
        android:id="@+id/report_menu_navigation_top"
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/main_menu_accessibility_top"
            android:scaleType="fitXY"
            android:src="@drawable/navigation_bar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/report_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/report_menu_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:text="@string/report_back"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/report_menu_navigation_top"
        android:layout_above="@+id/report_menu_navigation_bottom"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:layout_margin="10dp"
            android:text="@string/report_description"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/report_menu_edit"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="6.12"
            android:inputType="textMultiLine"
            android:gravity="left"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/report_menu_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/report_send" />

    </LinearLayout>

    <ImageView
        android:id="@+id/report_menu_navigation_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/main_menu_accessibility_bottom"
        android:scaleType="fitXY"
        android:src="@drawable/navigation_bar" />

</RelativeLayout>
