<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <ImageView
        android:id="@+id/main_menu_navigation_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/main_menu_accessibility_top"
        android:scaleType="fitXY"
        android:src="@drawable/navigation_bar" />

    <TextView
        android:id="@+id/main_menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/main_menu_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/main_menu_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/main_menu_title"
        android:layout_alignBottom="@+id/main_menu_title"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/main_menu_title"
        android:text="@string/main_menu_version"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/white" />

    <ListView
        android:id="@+id/main_menu_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_menu_navigation_bottom"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/main_menu_navigation_top" >
    </ListView>

    <ImageView
        android:id="@+id/main_menu_navigation_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/main_menu_accessibility_bottom"
        android:scaleType="fitXY"
        android:src="@drawable/navigation_bar" />

</RelativeLayout>
